elementCall sfu: fix keys.yaml mount point

--- a/charts/matrix-stack/templates/element-call/sfu_deployment.yaml
+++ b/charts/matrix-stack/templates/element-call/sfu_deployment.yaml
@@ -192,9 +192,8 @@ spec:
           {{- toYaml . | nindent 10 }}
 {{- end }}
         volumeMounts:
-        - mountPath: /conf/keys.yaml
+        - mountPath: /rendered-config
           name: rendered-config
-          subPath: keys.yaml
         - mountPath: /conf/config.yaml
           name: plain-config
           subPath: config.yaml
