elementCall: use jwt 0.2.2 + allow hostAliases

--- a/charts/matrix-stack/ci/fragments/element-call-pytest-extras.yaml
+++ b/charts/matrix-stack/ci/fragments/element-call-pytest-extras.yaml
@@ -5,11 +5,7 @@
 elementCall:
   ingress:
     host: call.{{ $.Values.serverName }}
-  image:
-    registry: ghcr.io
-    repository: element-hq/lk-jwt
-    tag: test
-    pullPolicy: Never
+    tlsSecret: "{{ $.Release.Name }}-element-call-tls"
   sfu:
     extraEnv:
     - name: DEBUG_RENDERING
