--- a/charts/matrix-stack/templates/element-call/sfu_rtc_tcp_service.yaml
+++ b/charts/matrix-stack/templates/element-call/sfu_rtc_tcp_service.yaml
@@ -12,7 +12,7 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    {{- include "element-io.element-call-sfu.labels" (dict "root" $ "context" .) | nindent 4 }}
+    {{- include "element-io.element-call-sfu-rtc.labels" (dict "root" $ "context" .) | nindent 4 }}
   name: {{ $.Release.Name }}-element-call-sfu-tcp
   namespace: {{ $.Release.Namespace }}
 spec:
