add hostaliases, try to make jwt reach synapse

--- a/charts/matrix-stack/ci/fragments/element-call-pytest-extras.yaml
+++ b/charts/matrix-stack/ci/fragments/element-call-pytest-extras.yaml
@@ -6,6 +6,9 @@ elementCall:
   ingress:
     host: call.{{ $.Values.serverName }}
     tlsSecret: "{{ $.Release.Name }}-element-call-tls"
+  extraEnv:
+  - name: LIVEKIT_INSECURE_SKIP_VERIFY_TLS
+    value: "YES_I_KNOW_WHAT_I_AM_DOING"
   sfu:
     extraEnv:
     - name: DEBUG_RENDERING
