--- a/charts/matrix-stack/templates/element-call/sfu_deployment.yaml
+++ b/charts/matrix-stack/templates/element-call/sfu_deployment.yaml
@@ -38,6 +38,10 @@ spec:
         {{- toYaml . | nindent 8 }}
 {{- end }}
     spec:
+{{- with .hostAliases }}
+      hostAliases:
+        {{- tpl (toYaml . | nindent 8) $ }}
+{{- end }}
 {{- include "element-io.ess-library.pods.commonSpec" (dict "root" $ "context" (dict "componentValues" . "key" "element-call-sfu" "deployment" true "usesMatrixTools" true)) | nindent 6 }}
       initContainers:
       - name: render-config
