--- a/charts/matrix-stack/templates/element-call/sfu_jwt_deployment.yaml
+++ b/charts/matrix-stack/templates/element-call/sfu_jwt_deployment.yaml
@@ -36,6 +36,10 @@ spec:
         {{- toYaml . | nindent 8 }}
 {{- end }}
     spec:
+{{- with .hostAliases }}
+      hostAliases:
+        {{- tpl (toYaml . | nindent 8) $ }}
+{{- end }}
 {{- include "element-io.ess-library.pods.commonSpec" (dict "root" $ "context" (dict "componentValues" . "key" "element-call-sfu-jwt" "deployment" true)) | nindent 6 }}
       containers:
       - name: sfu-jwt
