--- a/charts/matrix-stack/ci/matrix-authentication-service-postgres-secrets-in-helm-values.yaml
+++ b/charts/matrix-stack/ci/matrix-authentication-service-postgres-secrets-in-helm-values.yaml
@@ -2,11 +2,12 @@
 #
 # SPDX-License-Identifier: AGPL-3.0-only
 #
-# source_fragments: matrix-authentication-service-minimal.yaml matrix-authentication-service-secrets-externally.yaml postgres-secrets-in-helm.yaml postgres-matrix-authentication-service-secrets-in-helm.yaml
+# source_fragments: matrix-authentication-service-minimal.yaml matrix-authentication-service-secrets-externally.yaml postgres-secrets-in-helm.yaml postgres-matrix-authentication-service-secrets-in-helm.yaml init-secrets-disabled.yaml
 # DO NOT EDIT DIRECTLY. Edit the fragment files to add / modify / remove values
 
-# initSecrets don't have any required properties to be set and defaults to enabled
 elementWeb:
+  enabled: false
+initSecrets:
   enabled: false
 matrixAuthenticationService:
   encryptionSecret:
