--- a/charts/matrix-stack/ci/well-known-minimal-values.yaml
+++ b/charts/matrix-stack/ci/well-known-minimal-values.yaml
@@ -2,11 +2,13 @@
 #
 # SPDX-License-Identifier: AGPL-3.0-only
 #
-# source_fragments: well-known-minimal.yaml
+# source_fragments: well-known-minimal.yaml init-secrets-disabled.yaml
 # DO NOT EDIT DIRECTLY. Edit the fragment files to add / modify / remove values
 
-# initSecrets, postgres, wellKnownDelegation don't have any required properties to be set and defaults to enabled
+# postgres, wellKnownDelegation don't have any required properties to be set and defaults to enabled
 elementWeb:
+  enabled: false
+initSecrets:
   enabled: false
 matrixAuthenticationService:
   enabled: false
