--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -28,6 +28,7 @@ jobs:
       fail-fast: false
       matrix:
         test-component:
+        - element-call
         - element-web
         - matrix-authentication-service
         - synapse
