well-known: use retries in redirect test, consistent ports, endpoint

--- a/charts/matrix-stack/templates/well-known/ingress.yaml
+++ b/charts/matrix-stack/templates/well-known/ingress.yaml
@@ -28,7 +28,7 @@ spec:
           service:
             name: "{{ $.Release.Name }}-well-known"
             port:
-              number: 80
+              name: haproxy-wkd
 {{- else }}
       - path: /.well-known/matrix
         pathType: {{ include "element-io.ess-library.ingress.ingress-nginx-dot-path-type" (dict "root" $ "context" .ingress.controllerType) }}
@@ -36,14 +36,14 @@ spec:
           service:
             name: "{{ $.Release.Name }}-well-known"
             port:
-              number: 80
+              name: haproxy-wkd
       - path: /.well-known/element
         pathType: {{ include "element-io.ess-library.ingress.ingress-nginx-dot-path-type" (dict "root" $ "context" .ingress.controllerType) }}
         backend:
           service:
             name: "{{ $.Release.Name }}-well-known"
             port:
-              number: 80
+              name: haproxy-wkd
 {{- end -}}
 {{- end -}}
 {{- end -}}
