--- a/charts/matrix-stack/ci/fragments/matrix-rtc-secrets-externally.yaml
+++ b/charts/matrix-stack/ci/fragments/matrix-rtc-secrets-externally.yaml
@@ -3,7 +3,7 @@
 #
 # SPDX-License-Identifier: AGPL-3.0-only
 
-elementCall:
+matrixRTC:
   livekitKey:
     value: CHANGEME-eingaexei5eim5EiyaiK7Phaejihus5e
   livekitSecret:
