--- a/charts/matrix-stack/ci/fragments/matrix-rtc-secrets-in-helm.yaml
+++ b/charts/matrix-stack/ci/fragments/matrix-rtc-secrets-in-helm.yaml
@@ -4,12 +4,12 @@
 #
 # SPDX-License-Identifier: AGPL-3.0-only
 
-elementCall:
+matrixRTC:
   livekitKey:
-    secret: "{{ $.Release.Name }}-element-call-external"
+    secret: "{{ $.Release.Name }}-matrix-rtc-external"
     secretKey: livekitKey
   livekitSecret:
-    secret: "{{ $.Release.Name }}-element-call-external"
+    secret: "{{ $.Release.Name }}-matrix-rtc-external"
     secretKey: livekitSecret
 
 
