--- a/charts/matrix-stack/ci/matrix-authentication-service-checkov-values.yaml
+++ b/charts/matrix-stack/ci/matrix-authentication-service-checkov-values.yaml
@@ -5,8 +5,6 @@
 # source_fragments: matrix-authentication-service-minimal.yaml matrix-authentication-service-checkov.yaml init-secrets-minimal.yaml init-secrets-checkov.yaml postgres-minimal.yaml postgres-checkov.yaml
 # DO NOT EDIT DIRECTLY. Edit the fragment files to add / modify / remove values
 
-elementCall:
-  enabled: false
 elementWeb:
   enabled: false
 initSecrets:
@@ -22,6 +20,8 @@ matrixAuthenticationService:
     checkov.io/skip3: CKV2_K8S_6=No network policy yet
   ingress:
     host: mas.ess.localhost
+matrixRTC:
+  enabled: false
 postgres:
   annotations:
     checkov.io/skip1: CKV_K8S_11=We deliberately don't set CPU limits. Pod is BestEffort not Guaranteed
