--- a/charts/matrix-stack/ci/matrix-authentication-service-postgres-secrets-in-helm-values.yaml
+++ b/charts/matrix-stack/ci/matrix-authentication-service-postgres-secrets-in-helm-values.yaml
@@ -5,8 +5,6 @@
 # source_fragments: matrix-authentication-service-minimal.yaml matrix-authentication-service-secrets-externally.yaml postgres-secrets-in-helm.yaml postgres-matrix-authentication-service-secrets-in-helm.yaml init-secrets-disabled.yaml
 # DO NOT EDIT DIRECTLY. Edit the fragment files to add / modify / remove values
 
-elementCall:
-  enabled: false
 elementWeb:
   enabled: false
 initSecrets:
@@ -36,6 +34,8 @@ matrixAuthenticationService:
   synapseSharedSecret:
     secret: '{{ $.Release.Name }}-mas-external'
     secretKey: synapseShared
+matrixRTC:
+  enabled: false
 postgres:
   adminPassword:
     value: CHANGEME-phiaPh8iu9tiivaiWahquaeg8ohcub4a
