--- a/charts/matrix-stack/ci/matrix-authentication-service-synapse-secrets-externally-values.yaml
+++ b/charts/matrix-stack/ci/matrix-authentication-service-synapse-secrets-externally-values.yaml
@@ -6,8 +6,6 @@
 # DO NOT EDIT DIRECTLY. Edit the fragment files to add / modify / remove values
 
 # initSecrets, postgres don't have any required properties to be set and defaults to enabled
-elementCall:
-  enabled: false
 elementWeb:
   enabled: false
 matrixAuthenticationService:
@@ -42,6 +40,8 @@ matrixAuthenticationService:
   synapseSharedSecret:
     secret: '{{ $.Release.Name }}-mas-external'
     secretKey: synapseShared
+matrixRTC:
+  enabled: false
 serverName: ess.localhost
 synapse:
   appservices:
