--- a/charts/matrix-stack/ci/matrix-rtc-checkov-values.yaml
+++ b/charts/matrix-stack/ci/matrix-rtc-checkov-values.yaml
@@ -2,18 +2,21 @@
 #
 # SPDX-License-Identifier: AGPL-3.0-only
 #
-# source_fragments: element-call-minimal.yaml
+# source_fragments: matrix-rtc-minimal.yaml matrix-rtc-checkov.yaml
 # DO NOT EDIT DIRECTLY. Edit the fragment files to add / modify / remove values
 
 # initSecrets, postgres don't have any required properties to be set and defaults to enabled
-elementCall:
-  enabled: true
-  ingress:
-    host: rtc.ess.localhost
 elementWeb:
   enabled: false
 matrixAuthenticationService:
   enabled: false
+matrixRTC:
+  annotations:
+    checkov.io/skip1: CKV_K8S_11=We deliberately don't set CPU limits. Pod is BestEffort not Guaranteed
+    checkov.io/skip2: CKV_K8S_43=No digests
+    checkov.io/skip3: CKV2_K8S_6=No network policy yet
+  ingress:
+    host: mrtc.ess.localhost
 synapse:
   enabled: false
 wellKnownDelegation:
