--- a/charts/matrix-stack/ci/pytest-matrix-rtc-values.yaml
+++ b/charts/matrix-stack/ci/pytest-matrix-rtc-values.yaml
@@ -2,24 +2,9 @@
 #
 # SPDX-License-Identifier: AGPL-3.0-only
 #
-# source_fragments: element-call-minimal.yaml element-call-pytest-extras.yaml synapse-minimal.yaml synapse-pytest-base-extras.yaml synapse-pytest-self-extras.yaml matrix-authentication-service-minimal.yaml matrix-authentication-service-pytest-extras.yaml init-secrets-minimal.yaml init-secrets-pytest-extras.yaml postgres-minimal.yaml well-known-minimal.yaml well-known-pytest-extras.yaml
+# source_fragments: matrix-rtc-minimal.yaml matrix-rtc-pytest-extras.yaml synapse-minimal.yaml synapse-pytest-base-extras.yaml synapse-pytest-self-extras.yaml matrix-authentication-service-minimal.yaml matrix-authentication-service-pytest-extras.yaml init-secrets-minimal.yaml init-secrets-pytest-extras.yaml postgres-minimal.yaml well-known-minimal.yaml well-known-pytest-extras.yaml
 # DO NOT EDIT DIRECTLY. Edit the fragment files to add / modify / remove values
 
-elementCall:
-  extraEnv:
-    - name: LIVEKIT_INSECURE_SKIP_VERIFY_TLS
-      value: YES_I_KNOW_WHAT_I_AM_DOING
-  ingress:
-    host: call.{{ $.Values.serverName }}
-    tlsSecret: '{{ $.Release.Name }}-element-call-tls'
-  podSecurityContext:
-    runAsGroup: 0
-  sfu:
-    extraEnv:
-      - name: DEBUG_RENDERING
-        value: "1"
-    podSecurityContext:
-      runAsGroup: 0
 elementWeb:
   enabled: false
 global:
@@ -47,6 +32,21 @@ matrixAuthenticationService:
     tlsSecret: '{{ $.Release.Name }}-mas-web-tls'
   podSecurityContext:
     runAsGroup: 0
+matrixRTC:
+  extraEnv:
+    - name: LIVEKIT_INSECURE_SKIP_VERIFY_TLS
+      value: YES_I_KNOW_WHAT_I_AM_DOING
+  ingress:
+    host: mrtc.{{ $.Values.serverName }}
+    tlsSecret: '{{ $.Release.Name }}-matrix-rtc-tls'
+  podSecurityContext:
+    runAsGroup: 0
+  sfu:
+    extraEnv:
+      - name: DEBUG_RENDERING
+        value: "1"
+    podSecurityContext:
+      runAsGroup: 0
 postgres:
   podSecurityContext:
     runAsGroup: 0
