--- a/charts/matrix-stack/ci/quick-setup-letsencrypt-pg-external-values.yaml
+++ b/charts/matrix-stack/ci/quick-setup-letsencrypt-pg-external-values.yaml
@@ -8,8 +8,6 @@
 # initSecrets, postgres, wellKnownDelegation don't have any required properties to be set and defaults to enabled
 certManager:
   clusterIssuer: letsencrypt-prod
-elementCall:
-  enabled: false
 elementWeb:
   ingress:
     host: chat.your.tld
@@ -24,6 +22,8 @@ matrixAuthenticationService:
     port: 5432
     sslMode: prefer
     user: your-matrix-auth-service-user
+matrixRTC:
+  enabled: false
 serverName: your.tld
 synapse:
   ingress:
