--- a/charts/matrix-stack/ci/quick-setup-letsencrypt-pg-with-helm-values.yaml
+++ b/charts/matrix-stack/ci/quick-setup-letsencrypt-pg-with-helm-values.yaml
@@ -8,14 +8,14 @@
 # initSecrets, postgres, wellKnownDelegation don't have any required properties to be set and defaults to enabled
 certManager:
   clusterIssuer: letsencrypt-prod
-elementCall:
-  enabled: false
 elementWeb:
   ingress:
     host: chat.your.tld
 matrixAuthenticationService:
   ingress:
     host: account.your.tld
+matrixRTC:
+  enabled: false
 serverName: your.tld
 synapse:
   ingress:
