--- a/charts/matrix-stack/ci/well-known-synapse-mas-values.yaml
+++ b/charts/matrix-stack/ci/well-known-synapse-mas-values.yaml
@@ -6,13 +6,13 @@
 # DO NOT EDIT DIRECTLY. Edit the fragment files to add / modify / remove values
 
 # initSecrets, postgres, wellKnownDelegation don't have any required properties to be set and defaults to enabled
-elementCall:
-  enabled: false
 elementWeb:
   enabled: false
 matrixAuthenticationService:
   ingress:
     host: mas.ess.localhost
+matrixRTC:
+  enabled: false
 serverName: ess.localhost
 synapse:
   ingress:
