--- a/charts/matrix-stack/templates/matrix-rtc/sfu_configmap.yaml
+++ b/charts/matrix-stack/templates/matrix-rtc/sfu_configmap.yaml
@@ -4,7 +4,7 @@ Copyright 2024 New Vector Ltd
 SPDX-License-Identifier: AGPL-3.0-only
 */ -}}
 
-{{- with $.Values.elementCall -}}
+{{- with $.Values.matrixRTC -}}
 {{- if .enabled -}}
 {{- with .sfu -}}
 {{- if .enabled -}}
@@ -12,12 +12,12 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   labels:
-    {{- include "element-io.element-call-sfu.labels" (dict "root" $ "context" .) | nindent 4 }}
-  name: {{ $.Release.Name }}-element-call-sfu
+    {{- include "element-io.matrix-rtc-sfu.labels" (dict "root" $ "context" .) | nindent 4 }}
+  name: {{ $.Release.Name }}-matrix-rtc-sfu
   namespace: {{ $.Release.Namespace }}
 data:
   config.yaml: |
-    {{- tpl ($.Files.Get "configs/element-call/sfu/config.yaml.tpl") (dict "root" $ "context" .) | nindent 4 }}
+    {{- tpl ($.Files.Get "configs/matrix-rtc/sfu/config.yaml.tpl") (dict "root" $ "context" .) | nindent 4 }}
   keys.yaml: |
     ${LIVEKIT_KEY}: ${LIVEKIT_SECRET}
 {{- end -}}
