--- a/charts/matrix-stack/templates/matrix-rtc/sfu_deployment.yaml
+++ b/charts/matrix-stack/templates/matrix-rtc/sfu_deployment.yaml
@@ -4,7 +4,7 @@ Copyright 2024 New Vector Ltd
 SPDX-License-Identifier: AGPL-3.0-only
 */ -}}
 
-{{- with $.Values.elementCall -}}
+{{- with $.Values.matrixRTC -}}
 {{- if .enabled -}}
 {{- with .sfu -}}
 {{- if .enabled -}}
@@ -16,14 +16,14 @@ metadata:
     {{- toYaml . | nindent 4 }}
 {{- end }}
   labels:
-    {{- include "element-io.element-call-sfu.labels" (dict "root" $ "context" .) | nindent 4 }}
-  name: {{ $.Release.Name }}-element-call-sfu
+    {{- include "element-io.matrix-rtc-sfu.labels" (dict "root" $ "context" .) | nindent 4 }}
+  name: {{ $.Release.Name }}-matrix-rtc-sfu
   namespace: {{ $.Release.Namespace }}
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app.kubernetes.io/instance: {{ $.Release.Name }}-element-call-sfu
+      app.kubernetes.io/instance: {{ $.Release.Name }}-matrix-rtc-sfu
   strategy:
     type: RollingUpdate
     rollingUpdate:
@@ -32,7 +32,7 @@ spec:
   template:
     metadata:
       labels:
-        {{- include "element-io.element-call-sfu.labels" (dict "root" $ "context" .) | nindent 8 }}
+        {{- include "element-io.matrix-rtc-sfu.labels" (dict "root" $ "context" .) | nindent 8 }}
 {{- with .annotations }}
       annotations:
         {{- toYaml . | nindent 8 }}
@@ -42,7 +42,7 @@ spec:
       hostAliases:
         {{- tpl (toYaml . | nindent 8) $ }}
 {{- end }}
-{{- include "element-io.ess-library.pods.commonSpec" (dict "root" $ "context" (dict "componentValues" . "key" "element-call-sfu" "deployment" true "usesMatrixTools" true)) | nindent 6 }}
+{{- include "element-io.ess-library.pods.commonSpec" (dict "root" $ "context" (dict "componentValues" . "key" "matrix-rtc-sfu" "deployment" true "usesMatrixTools" true)) | nindent 6 }}
       initContainers:
       - name: render-config
 {{- with $.Values.matrixTools.image -}}
@@ -50,7 +50,7 @@ spec:
         image: "{{ .registry }}/{{ .repository }}@{{ .digest }}"
         imagePullPolicy: {{ .pullPolicy | default "IfNotPresent" }}
 {{- else }}
-        image: "{{ .registry }}/{{ .repository }}:{{ required "synapse.image.tag is required if no digest" .tag }}"
+        image: "{{ .registry }}/{{ .repository }}:{{ required "matrixTools.image.tag is required if no digest" .tag }}"
         imagePullPolicy: {{ .pullPolicy | default "Always" }}
 {{- end }}
 {{- end }}
@@ -59,16 +59,16 @@ spec:
           {{- toYaml . | nindent 10 }}
 {{- end }}
         env:
-        {{- (include "element-io.element-call-sfu.env" (dict "root" $ "context" .)) | nindent 8 }}
+        {{- (include "element-io.matrix-rtc-sfu.env" (dict "root" $ "context" .)) | nindent 8 }}
         - name: "LIVEKIT_KEY"
           value: >-
             {{ printf "{{ readfile \"/secrets/%s\" }}" (
               include "element-io.ess-library.init-secret-path" (
                   dict "root" $
                   "context" (dict
-                    "secretPath" "elementCall.livekitKey"
+                    "secretPath" "matrixRTC.livekitKey"
                     "initSecretKey" "ELEMENT_CALL_LIVEKIT_KEY"
-                    "defaultSecretName" (printf "%s-element-call-sfu-jwt" $.Release.Name)
+                    "defaultSecretName" (printf "%s-matrix-rtc-sfu-jwt" $.Release.Name)
                     "defaultSecretKey" "LIVEKIT_KEY"
                   )
                 )
@@ -80,9 +80,9 @@ spec:
                 (include "element-io.ess-library.init-secret-path" (
                     dict "root" $
                     "context" (dict
-                      "secretPath" "elementCall.livekitSecret"
+                      "secretPath" "matrixRTC.livekitSecret"
                       "initSecretKey" "ELEMENT_CALL_LIVEKIT_SECRET"
-                      "defaultSecretName" (printf "%s-element-call-sfu-jwt" $.Release.Name)
+                      "defaultSecretName" (printf "%s-matrix-rtc-sfu-jwt" $.Release.Name)
                       "defaultSecretKey" "LIVEKIT_SECRET"
                       )
                     )
@@ -107,7 +107,7 @@ spec:
         - mountPath: /conf
           name: rendered-config
           readOnly: false
-{{- range $secret := include "element-io.element-call-sfu-jwt.configSecrets" (dict "root" $ "context" $.Values.elementCall) | fromJsonArray }}
+{{- range $secret := include "element-io.matrix-rtc-sfu-jwt.configSecrets" (dict "root" $ "context" $.Values.matrixRTC) | fromJsonArray }}
         - mountPath: /secrets/{{ tpl $secret $ }}
           name: "secret-{{ tpl $secret $ }}"
           readOnly: true
@@ -123,7 +123,7 @@ spec:
         image: "{{ .registry }}/{{ .repository }}@{{ .digest }}"
         imagePullPolicy: {{ .pullPolicy | default "IfNotPresent" }}
 {{- else }}
-        image: "{{ .registry }}/{{ .repository }}:{{ required ".elementCall.image.tag is required if no digest" .tag }}"
+        image: "{{ .registry }}/{{ .repository }}:{{ required ".matrixRTC.image.tag is required if no digest" .tag }}"
         imagePullPolicy: {{ .pullPolicy | default "Always" }}
 {{- end }}
 {{- end }}
@@ -131,7 +131,7 @@ spec:
         securityContext:
           {{- toYaml . | nindent 10 }}
 {{- end }}
-{{- with (include "element-io.element-call-sfu.env" (dict "root" $ "context" .)) }}
+{{- with (include "element-io.matrix-rtc-sfu.env" (dict "root" $ "context" .)) }}
         env:
           {{- . | nindent 10 }}
   {{- end }}
@@ -202,13 +202,13 @@ spec:
           name: plain-config
           subPath: config.yaml
       volumes:
-{{- range $secret := include "element-io.element-call-sfu-jwt.configSecrets" (dict "root" $ "context" $.Values.elementCall) | fromJsonArray }}
+{{- range $secret := include "element-io.matrix-rtc-sfu-jwt.configSecrets" (dict "root" $ "context" $.Values.matrixRTC) | fromJsonArray }}
       - secret:
           secretName: {{ tpl $secret $ }}
         name: secret-{{ tpl $secret $ }}
 {{- end }}
       - configMap:
-          name: "{{ $.Release.Name }}-element-call-sfu"
+          name: "{{ $.Release.Name }}-matrix-rtc-sfu"
           defaultMode: 420
         name: plain-config
       - emptyDir:
