--- a/charts/matrix-stack/templates/matrix-rtc/sfu_jwt_service.yaml
+++ b/charts/matrix-stack/templates/matrix-rtc/sfu_jwt_service.yaml
@@ -4,14 +4,14 @@ Copyright 2024 New Vector Ltd
 SPDX-License-Identifier: AGPL-3.0-only
 */ -}}
 
-{{- with $.Values.elementCall -}}
+{{- with $.Values.matrixRTC -}}
 {{- if .enabled -}}
 apiVersion: v1
 kind: Service
 metadata:
   labels:
-    {{- include "element-io.element-call-sfu-jwt.labels" (dict "root" $ "context" .) | nindent 4 }}
-  name: {{ $.Release.Name }}-element-call-sfu-jwt
+    {{- include "element-io.matrix-rtc-sfu-jwt.labels" (dict "root" $ "context" .) | nindent 4 }}
+  name: {{ $.Release.Name }}-matrix-rtc-sfu-jwt
   namespace: {{ $.Release.Namespace }}
 spec:
   type: ClusterIP
@@ -20,6 +20,6 @@ spec:
     port: 8080
     targetPort: http
   selector:
-    app.kubernetes.io/instance: "{{ $.Release.Name }}-element-call-sfu-jwt"
+    app.kubernetes.io/instance: "{{ $.Release.Name }}-matrix-rtc-sfu-jwt"
 {{- end -}}
 {{- end -}}
