--- a/charts/matrix-stack/ci/example-default-enabled-components-values.yaml
+++ b/charts/matrix-stack/ci/example-default-enabled-components-values.yaml
@@ -6,14 +6,14 @@
 # DO NOT EDIT DIRECTLY. Edit the fragment files to add / modify / remove values
 
 # initSecrets, postgres, wellKnownDelegation don't have any required properties to be set and defaults to enabled
-elementCall:
-  enabled: false
 elementWeb:
   ingress:
     host: element.ess.localhost
 matrixAuthenticationService:
   ingress:
     host: mas.ess.localhost
+matrixRTC:
+  enabled: false
 serverName: ess.localhost
 synapse:
   ingress:
