--- a/charts/matrix-stack/ci/fragments/element-web-pytest-extras.yaml
+++ b/charts/matrix-stack/ci/fragments/element-web-pytest-extras.yaml
@@ -26,7 +26,7 @@ elementWeb:
           }
         },
         "element_call": {
-          "url": "https://call.{{ $.Values.serverName }}",
+          "url": "https://mrtc.{{ $.Values.serverName }}",
           "use_exclusively": true
         },
         "features": {
