--- a/charts/matrix-stack/ci/fragments/matrix-rtc-checkov.yaml
+++ b/charts/matrix-stack/ci/fragments/matrix-rtc-checkov.yaml
@@ -2,7 +2,7 @@
 #
 # SPDX-License-Identifier: AGPL-3.0-only
 
-elementCall:
+matrixRTC:
   annotations:
     checkov.io/skip1: CKV_K8S_11=We deliberately don't set CPU limits. Pod is BestEffort not Guaranteed
     checkov.io/skip2: CKV_K8S_43=No digests
