--- a/charts/matrix-stack/ci/fragments/matrix-rtc-pytest-extras.yaml
+++ b/charts/matrix-stack/ci/fragments/matrix-rtc-pytest-extras.yaml
@@ -2,10 +2,10 @@
 #
 # SPDX-License-Identifier: AGPL-3.0-only
 
-elementCall:
+matrixRTC:
   ingress:
-    host: call.{{ $.Values.serverName }}
-    tlsSecret: "{{ $.Release.Name }}-element-call-tls"
+    host: mrtc.{{ $.Values.serverName }}
+    tlsSecret: "{{ $.Release.Name }}-matrix-rtc-tls"
   extraEnv:
   - name: LIVEKIT_INSECURE_SKIP_VERIFY_TLS
     value: "YES_I_KNOW_WHAT_I_AM_DOING"
