--- a/charts/matrix-stack/ci/matrix-authentication-service-synapse-secrets-in-helm-values.yaml
+++ b/charts/matrix-stack/ci/matrix-authentication-service-synapse-secrets-in-helm-values.yaml
@@ -6,8 +6,6 @@
 # DO NOT EDIT DIRECTLY. Edit the fragment files to add / modify / remove values
 
 # initSecrets, postgres don't have any required properties to be set and defaults to enabled
-elementCall:
-  enabled: false
 elementWeb:
   enabled: false
 matrixAuthenticationService:
@@ -48,6 +46,8 @@ matrixAuthenticationService:
     value: CHANGEME-eiv6wae8shooPhie4ief8ru2egahbah0
   synapseSharedSecret:
     value: CHANGEME-iaw8eeSef4zeefie8ii3akien9tiaYah
+matrixRTC:
+  enabled: false
 serverName: ess.localhost
 synapse:
   ingress:
