--- a/charts/matrix-stack/ci/matrix-rtc-secrets-externally-values.yaml
+++ b/charts/matrix-stack/ci/matrix-rtc-secrets-externally-values.yaml
@@ -2,23 +2,21 @@
 #
 # SPDX-License-Identifier: AGPL-3.0-only
 #
-# source_fragments: element-call-minimal.yaml element-call-secrets-in-helm.yaml
+# source_fragments: matrix-rtc-minimal.yaml matrix-rtc-secrets-externally.yaml
 # DO NOT EDIT DIRECTLY. Edit the fragment files to add / modify / remove values
 
 # initSecrets, postgres don't have any required properties to be set and defaults to enabled
-elementCall:
-  ingress:
-    host: rtc.ess.localhost
-  livekitKey:
-    secret: '{{ $.Release.Name }}-element-call-external'
-    secretKey: livekitKey
-  livekitSecret:
-    secret: '{{ $.Release.Name }}-element-call-external'
-    secretKey: livekitSecret
 elementWeb:
   enabled: false
 matrixAuthenticationService:
   enabled: false
+matrixRTC:
+  ingress:
+    host: mrtc.ess.localhost
+  livekitKey:
+    value: CHANGEME-eingaexei5eim5EiyaiK7Phaejihus5e
+  livekitSecret:
+    value: CHANGEME-gohseengahch9pheedi5OomeHea6maem
 synapse:
   enabled: false
 wellKnownDelegation:
