--- a/charts/matrix-stack/ci/pytest-matrix-authentication-service-values.yaml
+++ b/charts/matrix-stack/ci/pytest-matrix-authentication-service-values.yaml
@@ -5,8 +5,6 @@
 # source_fragments: synapse-minimal.yaml synapse-pytest-base-extras.yaml matrix-authentication-service-minimal.yaml matrix-authentication-service-pytest-extras.yaml init-secrets-minimal.yaml init-secrets-pytest-extras.yaml postgres-minimal.yaml
 # DO NOT EDIT DIRECTLY. Edit the fragment files to add / modify / remove values
 
-elementCall:
-  enabled: false
 elementWeb:
   enabled: false
 haproxy:
@@ -30,6 +28,8 @@ matrixAuthenticationService:
     tlsSecret: '{{ $.Release.Name }}-mas-web-tls'
   podSecurityContext:
     runAsGroup: 0
+matrixRTC:
+  enabled: false
 postgres:
   podSecurityContext:
     runAsGroup: 0
