--- a/charts/matrix-stack/ci/quick-setup-certificates-pg-external-values.yaml
+++ b/charts/matrix-stack/ci/quick-setup-certificates-pg-external-values.yaml
@@ -6,8 +6,6 @@
 # DO NOT EDIT DIRECTLY. Edit the fragment files to add / modify / remove values
 
 # initSecrets, postgres don't have any required properties to be set and defaults to enabled
-elementCall:
-  enabled: false
 elementWeb:
   ingress:
     host: chat.your.tld
@@ -24,6 +22,8 @@ matrixAuthenticationService:
     port: 5432
     sslMode: prefer
     user: your-matrix-auth-service-user
+matrixRTC:
+  enabled: false
 serverName: your.tld
 synapse:
   ingress:
