--- a/charts/matrix-stack/ci/quick-setup-external-cert-pg-external-values.yaml
+++ b/charts/matrix-stack/ci/quick-setup-external-cert-pg-external-values.yaml
@@ -22,6 +22,8 @@ matrixAuthenticationService:
     port: 5432
     sslMode: prefer
     user: your-matrix-auth-service-user
+matrixRTC:
+  enabled: false
 serverName: your.tld
 synapse:
   ingress:
