--- a/charts/matrix-stack/ci/quick-setup-external-cert-pg-with-helm-values.yaml
+++ b/charts/matrix-stack/ci/quick-setup-external-cert-pg-with-helm-values.yaml
@@ -14,6 +14,8 @@ ingress:
 matrixAuthenticationService:
   ingress:
     host: account.your.tld
+matrixRTC:
+  enabled: false
 serverName: your.tld
 synapse:
   ingress:
