--- a/charts/matrix-stack/ci/quick-setup-wildcard-cert-pg-with-helm-values.yaml
+++ b/charts/matrix-stack/ci/quick-setup-wildcard-cert-pg-with-helm-values.yaml
@@ -6,8 +6,6 @@
 # DO NOT EDIT DIRECTLY. Edit the fragment files to add / modify / remove values
 
 # initSecrets, postgres, wellKnownDelegation don't have any required properties to be set and defaults to enabled
-elementCall:
-  enabled: false
 elementWeb:
   ingress:
     host: chat.your.tld
@@ -16,6 +14,8 @@ ingress:
 matrixAuthenticationService:
   ingress:
     host: account.your.tld
+matrixRTC:
+  enabled: false
 serverName: your.tld
 synapse:
   ingress:
