--- a/charts/matrix-stack/ci/synapse-checkov-with-workers-values.yaml
+++ b/charts/matrix-stack/ci/synapse-checkov-with-workers-values.yaml
@@ -5,8 +5,6 @@
 # source_fragments: synapse-minimal.yaml synapse-some-workers-running.yaml synapse-checkov.yaml haproxy-checkov.yaml init-secrets-minimal.yaml init-secrets-checkov.yaml postgres-minimal.yaml postgres-checkov.yaml
 # DO NOT EDIT DIRECTLY. Edit the fragment files to add / modify / remove values
 
-elementCall:
-  enabled: false
 elementWeb:
   enabled: false
 haproxy:
@@ -21,6 +19,8 @@ initSecrets:
     checkov.io/skip3: CKV2_K8S_6=No network policy yet
     checkov.io/skip4: CKV_K8S_38=The job needs a service account
 matrixAuthenticationService:
+  enabled: false
+matrixRTC:
   enabled: false
 postgres:
   annotations:
