--- a/charts/matrix-stack/ci/synapse-worker-example-values.yaml
+++ b/charts/matrix-stack/ci/synapse-worker-example-values.yaml
@@ -6,11 +6,11 @@
 # DO NOT EDIT DIRECTLY. Edit the fragment files to add / modify / remove values
 
 # initSecrets, postgres don't have any required properties to be set and defaults to enabled
-elementCall:
-  enabled: false
 elementWeb:
   enabled: false
 matrixAuthenticationService:
+  enabled: false
+matrixRTC:
   enabled: false
 serverName: ess.localhost
 synapse:
