--- a/charts/matrix-stack/templates/matrix-rtc/sfu_rtc_tcp_service.yaml
+++ b/charts/matrix-stack/templates/matrix-rtc/sfu_rtc_tcp_service.yaml
@@ -4,7 +4,7 @@ Copyright 2024 New Vector Ltd
 SPDX-License-Identifier: AGPL-3.0-only
 */ -}}
 
-{{- with $.Values.elementCall -}}
+{{- with $.Values.matrixRTC -}}
 {{- if .enabled -}}
 {{- with .sfu -}}
 {{- if and .enabled .exposedServices.rtcTcp.enabled (eq .exposedServices.rtcTcp.portType "NodePort") -}}
@@ -12,8 +12,8 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    {{- include "element-io.element-call-sfu-rtc.labels" (dict "root" $ "context" .) | nindent 4 }}
-  name: {{ $.Release.Name }}-element-call-sfu-tcp
+    {{- include "element-io.matrix-rtc-sfu-rtc.labels" (dict "root" $ "context" .) | nindent 4 }}
+  name: {{ $.Release.Name }}-matrix-rtc-sfu-tcp
   namespace: {{ $.Release.Namespace }}
 spec:
   type: NodePort
@@ -25,7 +25,7 @@ spec:
     targetPort: {{ .exposedServices.rtcTcp.port }}
     nodePort: {{ .exposedServices.rtcTcp.port }}
   selector:
-    app.kubernetes.io/instance: "{{ $.Release.Name }}-element-call-sfu"
+    app.kubernetes.io/instance: "{{ $.Release.Name }}-matrix-rtc-sfu"
 {{- end }}
 {{- end }}
 {{- end }}
