--- a/charts/matrix-stack/templates/matrix-rtc/sfu_service.yaml
+++ b/charts/matrix-stack/templates/matrix-rtc/sfu_service.yaml
@@ -4,7 +4,7 @@ Copyright 2024 New Vector Ltd
 SPDX-License-Identifier: AGPL-3.0-only
 */ -}}
 
-{{- with $.Values.elementCall -}}
+{{- with $.Values.matrixRTC -}}
 {{- if .enabled -}}
 {{- with .sfu -}}
 {{- if .enabled -}}
@@ -12,8 +12,8 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    {{- include "element-io.element-call-sfu.labels" (dict "root" $ "context" .) | nindent 4 }}
-  name: {{ $.Release.Name }}-element-call-sfu
+    {{- include "element-io.matrix-rtc-sfu.labels" (dict "root" $ "context" .) | nindent 4 }}
+  name: {{ $.Release.Name }}-matrix-rtc-sfu
   namespace: {{ $.Release.Namespace }}
 spec:
   type: ClusterIP
@@ -22,7 +22,7 @@ spec:
     port: 7880
     targetPort: http
   selector:
-    app.kubernetes.io/instance: "{{ $.Release.Name }}-element-call-sfu"
+    app.kubernetes.io/instance: "{{ $.Release.Name }}-matrix-rtc-sfu"
 {{- end -}}
 {{- end -}}
 {{- end -}}
