--- a/charts/matrix-stack/templates/matrix-rtc/sfu_serviceaccount.yaml
+++ b/charts/matrix-stack/templates/matrix-rtc/sfu_serviceaccount.yaml
@@ -4,11 +4,11 @@ Copyright 2024 New Vector Ltd
 SPDX-License-Identifier: AGPL-3.0-only
 */ -}}
 
-{{- with $.Values.elementCall -}}
+{{- with $.Values.matrixRTC -}}
 {{- if .enabled -}}
 {{- with .sfu -}}
 {{- if .enabled -}}
-{{- include "element-io.ess-library.serviceAccount" (dict "root" $ "context" (dict "componentValues" . "key" "element-call-sfu")) }}
+{{- include "element-io.ess-library.serviceAccount" (dict "root" $ "context" (dict "componentValues" . "key" "matrix-rtc-sfu")) }}
 {{- end -}}
 {{- end -}}
 {{- end -}}
