matrix rtc: enhance labels

--- a/charts/matrix-stack/templates/matrix-rtc/sfu_service_monitor.yaml
+++ b/charts/matrix-stack/templates/matrix-rtc/sfu_service_monitor.yaml
@@ -24,7 +24,7 @@ spec:
   selector:
     matchLabels:
       app.kubernetes.io/part-of: matrix-stack
-      app.kubernetes.io/component: matrix-stack-rtc
+      app.kubernetes.io/component: matrix-rtc-voip-server
       app.kubernetes.io/instance: {{ $.Release.Name }}-matrix-rtc-sfu
 {{- end }}
 {{- end }}
